--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,24 @@ p{
   color: #20201F;
 }
 
+button{
+  border: 1px solid #20201F;
+  border-radius: 42px;
+  padding: 13px 30px;
+  background-color: transparent;
+}
+
+button a{
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 19px;
+  text-transform: lowercase;
+  color: #20201F;
+  text-decoration: none;
+}
+
 header{
   background-image: url(/img/header-bg.jpg);
   background-repeat: no-repeat;
@@ -93,9 +111,55 @@ nav a{
 
 .tables-text{
   width: 50%;
-  padding: 145px 48px 0 84px;
+  padding: 145px 0 0 84px;
 }
 
 .tables-text h2{
   margin-bottom: 52px;
+}
+
+.tables-text p{
+  padding-right: 48px;
+  padding-bottom: 69px;
+}
+
+.tables-text button{
+  margin-right: 28px;
+  margin-bottom: 107px;
+}
+
+.tables-image{
+  width: 50%;
+  position: relative;
+}
+
+.tables-image span{
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 23px;
+  text-transform: lowercase;
+  color: #E5E2DE;
+  position: absolute;
+  left: 17px;
+  top: 279px;
+}
+
+#tables-1{
+  position: absolute;
+  top: 32px;
+  right: 43px;
+}
+
+#tables-2{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+#tables-3{
+  position: absolute;
+  right: 0;
+  bottom: 61px;
 }
