upgrade html, css, img

--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,9 @@ nav a{
   right: 0;
   bottom: 61px;
 }
+
+.collections{
+  background: #E5E2DE;
+  padding-top: 116px;
+  padding-left: 84px;
+}
