--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ h1{
   line-height: 68px;
   text-align: center;
   text-transform: lowercase;
-  color: #FFFFFF;}
+  color: #FFFFFF;
+}
 
 h2{
   font-family: 'Roboto', sans-serif;
@@ -21,7 +22,9 @@ h2{
   font-size: 68px;
   line-height: 68px;
   text-transform: lowercase;
-  color: #20201F;}
+  color: #20201F;
+  word-spacing: 60px;
+}
 
 h3{
   font-family: 'Roboto', sans-serif;
@@ -30,7 +33,8 @@ h3{
   font-size: 68px;
   line-height: 68px;
   text-transform: lowercase;
-  color: #E5E2DE;}
+  color: #E5E2DE;
+}
 
 h4{
   font-family: 'Roboto', sans-serif;
@@ -40,7 +44,8 @@ h4{
   line-height: 58px;
   text-align: center;
   text-transform: lowercase;
-  color: #20201F}
+  color: #20201F
+}
 
 p{
   font-family: 'Work Sans', serif;
@@ -126,6 +131,15 @@ nav a{
 .tables-text button{
   margin-right: 28px;
   margin-bottom: 107px;
+}
+
+.tables-text input label{
+  font-family: 'Work Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 19px;
+  line-height: 23px;
+  color: #8B8B8B;
 }
 
 .tables-image{
