--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ button a{
 }
 
 header{
-  background-image: url(/img/header-bg.jpg);
+  background-image: url(./img/header-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
